# client-python

./: .gitignore  CMakeLists.txt  README.md  build-all.bat  build-all.sh  build-and-run-sanity-test.sh  conanfile.py  conanfile.py.old  conanfile.txt  conanfile.txt.old  install_req.sh  pyproject.toml  setup.py  wait-and-test.sh
.github/workflows/: build.yml  xtest.yml
docker/armhf-cross-platform/: run-armhf-cross-phase1.sh  run-armhf-cross-phase2.sh
docker/armhf-cross-platform/src/phase1/: Dockerfile
docker/armhf-cross-platform/src/phase2/: Dockerfile
docker/manylinux/: build_wheels.sh  deploy.sh  deploy_wheels.sh  install_req.sh
docker/manylinux_aarch64/: build_wheels.sh  deploy.sh  install_req.sh
docker/raspberrypi-armv7/: run-pi-armv7.sh
docker/raspberrypi-armv7/src/: Dockerfile
docker/raspberrypi-armv8/: run-pi-4-armv8.sh
docker/raspberrypi-armv8/src/: Dockerfile
docker/ubuntu-18-04/: run-ubuntu-18-04.sh
docker/ubuntu-18-04/src/: Dockerfile
m1-wheels/: opentdf-1.5.3-cp310-cp310-macosx_12_0_arm64.whl  opentdf-1.5.3-cp311-cp311-macosx_12_0_arm64.whl  opentdf-1.5.3-cp38-cp38-macosx_12_0_arm64.whl  opentdf-1.5.3-cp39-cp39-macosx_12_0_arm64.whl  opentdf-1.5.4-cp310-cp310-macosx_12_0_arm64.whl  opentdf-1.5.4-cp311-cp311-macosx_12_0_arm64.whl  opentdf-1.5.4-cp38-cp38-macosx_12_0_arm64.whl  opentdf-1.5.4-cp39-cp39-macosx_12_0_arm64.whl
src/: CMakeLists.txt  README.md
src/module/: .python_module.cpp.swp  python_module.cpp  setup.py
src/python-bindings/: CMakeLists.txt
src/python-bindings/pips/: pyproject.toml  python_module.cpp  setup.cfg  setup.py
src/python-bindings/pips/build_tools/: build_wheels.sh
src/python-bindings/pips/opentdf/: __init__.py
src/python-bindings/pips/opentdf.egg-info/: SOURCES.txt
src/sample/: manual-auth-example.py  oidc-auth.py  sample.py
